# feed-rust

./: Cargo.toml  Makefile  build.rs
configs/: cfg.json  clients.yaml  consul-config-local.json
deployments/: docker-compose.yml
src/: config.rs  main.rs  mongo.rs  repository.rs  server.rs
src/proto/feedapi/: feedapi.proto  feedapi.rs  feedapi_grpc.rs  lib.rs
tests/: create_contractor.rs  get_feed_row.rs
