[package]
name = "feed-rust"
version = "0.1.0"
authors = ["Ilya Sinyakin <sinyakin.ilya@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "feedapi"
path = "src/proto/feedapi/lib.rs"

[[bin]]
name="feed-srv"
path = "src/server.rs"

[build-dependencies]
protoc-rust = "2.17.0"


[dependencies]
protobuf = "2.17.0"
grpcio = "0.6"
libc = "0.2"
futures = "0.3"
prost = { version = "0.6", optional = true }
bytes = { version = "0.5", optional = true }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = {version = "1.1.1", default-features = false, features = ["sync"]}
uuid = "0.8"